# gun-violence-dashboard-data

./: .env.example  .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: daily-homicide-sync.yml  daily-shootings-sync.yml  daily-sync.yml  parallel-scrape.yml
gun_violence_dashboard_data/: __init__.py  __main__.py  core.py  courts.py  geo.py  homicide_scraper.py  homicides.py  shootings.py  streets.py  tools.py  utils.py
gun_violence_dashboard_data/data/: meta.json  shootings_2015.geojson  shootings_2015.json  shootings_2016.geojson  shootings_2016.json  shootings_2017.geojson  shootings_2017.json  shootings_2018.json  shootings_2019.geojson  shootings_2019.json  shootings_2020.json  shootings_2020_daily.json  shootings_cumulative_daily.json
gun_violence_dashboard_data/data/Street_Centerline/: Street_Centerline.sbn
gun_violence_dashboard_data/data/Street_Network_Types/: Street_Network_Types.sbn  Street_Network_Types.sbx  Street_Network_Types.shp  Street_Network_Types.shx
gun_violence_dashboard_data/data/processed/: data_years.json  homicide_totals.json  homicides_daily.csv  shootings_2015.json  shootings_2016.json  shootings_2017.json  shootings_2018.json  shootings_2019.json  shootings_2020.json  shootings_2021.json  shootings_2022.json  shootings_2023.json  shootings_2024.json  shootings_2025.json  shootings_cumulative_daily.json
gun_violence_dashboard_data/data/processed/geo/: council_districts.geojson  neighborhoods.geojson  police_districts.geojson  zip_codes.geojson
gun_violence_dashboard_data/data/raw/: homicide_totals_daily.csv  scraped_courts_data.json  scraped_courts_data2.json  scraped_courts_data_0.json  scraped_courts_data_1.json  scraped_courts_data_2.json  scraped_courts_data_3.json  scraped_courts_data_4.json  scraped_courts_data_5.json  scraped_courts_data_6.json  scraped_courts_data_7.json  scraped_courts_data_8.json  scraped_courts_data_9.json  shootings.json
gun_violence_dashboard_data/data/raw/Street_Centerline/: Street_Centerline.sbx  Street_Centerline.shp.xml  Street_Centerline.shx
(+1 files in other folders)
