[tool.poetry]
name = "gun-violence-dashboard-data"
version = "0.1.0"
description = "Python toolkit for preprocessing data for the City Controller's Gun Violence Dashboard"
authors = ["Nick Hand <nick.hand@phila.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "*"
numpy = "*"
geopandas = "*"
carto2gpd = "*"
loguru = "*"
click = "*"
simplejson = "*"
rtree = "*"
requests = "*"
bs4 = "*"
cached-property = "*"
phl-courts-scraper = {git = "https://github.com/PhiladelphiaController/phl-courts-scraper", branch = "master"}
webdriver-manager = "*"
esri2gpd = "*"
xlrd = "*"
tryagain = "^1.0"
boto3 = "^1.21.16"
python-dotenv = "^0.19.2"


[tool.poetry.dev-dependencies]
black = "==19.3b0"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
ipython = "^7.21.0"

[tool.poetry.scripts]
gv-dashboard-data = "gun_violence_dashboard_data.__main__:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
